Agregar modelo EF

--- a/NCNP/NCNP.csproj
+++ b/NCNP/NCNP.csproj
@@ -49,6 +49,8 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -210,6 +212,27 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="DataContext\GetPaciente_Result.cs">
+      <DependentUpon>NCNP_EDM.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataContext\NCNP_EDM.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>NCNP_EDM.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataContext\NCNP_EDM.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>NCNP_EDM.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataContext\NCNP_EDM.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>NCNP_EDM.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="DataContext\Paciente.cs">
+      <DependentUpon>NCNP_EDM.tt</DependentUpon>
+    </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -224,6 +247,16 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="DataContext\NCNP_EDM.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>NCNP_EDM.edmx</DependentUpon>
+      <LastGenOutput>NCNP_EDM.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="DataContext\NCNP_EDM.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>NCNP_EDM.edmx</DependentUpon>
+      <LastGenOutput>NCNP_EDM.cs</LastGenOutput>
+    </Content>
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -232,6 +265,13 @@
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <EntityDeploy Include="DataContext\NCNP_EDM.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>NCNP_EDM.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="DataContext\NCNP_EDM.edmx.diagram">
+      <DependentUpon>NCNP_EDM.edmx</DependentUpon>
     </Content>
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
@@ -294,6 +334,9 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
