--- a/NCNP/Web.config
+++ b/NCNP/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-NCNP-20181110084742.mdf;Initial Catalog=aspnet-NCNP-20181110084742;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=MARCUSHOST;Initial Catalog=NCNP;  user id=sa; password=Marcus_988;" providerName="System.Data.SqlClient" />
   <add name="NCNPEntities" connectionString="metadata=res://*/DataContext.NCNP_EDM.csdl|res://*/DataContext.NCNP_EDM.ssdl|res://*/DataContext.NCNP_EDM.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MARCUSHOST;initial catalog=NCNP;persist security info=True;user id=sa;password=Marcus_988;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
